assigning the z-index to the first image, adding the target attribute to the map links, adding event.preventDefault to populate the form.

--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -1,12 +1,15 @@
 .gallery {
   &__photo-container {
     position: relative;
-
     box-sizing: border-box;
     width: 100%;
     max-height: 320px;
     overflow: hidden;
     transition: transform 0.3s;
+
+    &--first {
+      z-index: 1;
+    }
 
     &::after {
       content: "";
