--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,5 @@
 .page {
-  font-family: "Cinzel", sans-serif;
+  font-family: "Cinzel", serif;
   scroll-behavior: smooth;
 }
 
@@ -440,6 +440,7 @@
     grid-column: 6/7;
   }
 }
+
 @media (min-width: 1024px) {
   .grid__item--desktop-1-1 {
     grid-column: 1/2;
@@ -777,6 +778,10 @@
   transition: transform 0.3s;
 }
 
+.gallery__photo-container--first {
+  z-index: 1;
+}
+
 .gallery__photo-container::after {
   content: "";
   display: block;
@@ -906,7 +911,7 @@
 }
 
 .button:active {
-  background-color: #eb343b;
+  background-color: #eb343d;
 }
 
 .explore-online__item {
@@ -1053,3 +1058,5 @@
   height: 144px;
   resize: none;
 }
+
+/*# sourceMappingURL=main.css.map */
