--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,4 +1,5 @@
 .page {
+  font-family: "Cinzel", serif;
   scroll-behavior: smooth;
   &__body {
     margin: 0;
